# metamodel

./: .gitignore  AUTHORIZED_INTEGRATORS.md  Ideal Process.mmd  LICENSE  Makefile  README.md  current.mmd  lifecycle.mmd  metalmodel.json  pyproject.toml
metamodel_core/models/: __init__.py  validators.py
scripts/: generate_schema.py  validate_metamodel.py
src/metamodel_core/: README.md  __init__.py  unstructured.md  unstructured.mmd
src/metamodel_core/data/: blah.md  ingest.json  metamodel.json  metamodel.yaml
src/metamodel_core/models/: __init__.py  metamodel.py
src/metamodel_core/schema/: __init__.py  protobuf_generator.py
tests/: test_change_analyzer.py  test_schema_generator.py  test_validation.py
